--- a/app/templates/accounts.html
+++ b/app/templates/accounts.html
@@ -68,4 +68,11 @@
         {% endif %}
     </form>
 </div>
+<div class="bgImage" style="text-align: center; margin-top: 5%;">
+    <h3 class="quote"><q>Privacy is not an option<br>
+     and it shouldn't be the price we accept <br>
+     for just getting on the internet
+    </q></h3>
+    <h5 class="quote">~ Gary Kovacs</h5>
+  </div> 
 {% endblock content %}
