--- a/app/static/regstyles.css
+++ b/app/static/regstyles.css
@@ -19,6 +19,7 @@ body {
   margin: 0;
   padding: 20px;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .page {
   /*background: linear-gradient(212.38deg, rgba(242, 57, 127, 0.7) 0%, rgba(175, 70, 189, 0.71) 100%),url(images/laugherpro.jpg);*/
