--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        {% block title %}<title>HUMORER</title>{% endblock %}
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        {% load static %}
-        <link rel="stylesheet" href="{% static '/styles.css' %}">
-        <script type="text/javascript" src="{% static 'index.js' %}"></script>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    {% load static %}
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+
+    <title>HUMORER</title>
+
+    
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" type="text/css" href="{% static '/bootstrap.min.css' %}">
+
+    <link rel="stylesheet" href="{% static '/font-awesome.css' %}">
+
+    <link rel="stylesheet" href="{% static '/templatemo-training-studio.css' %}">
+
     </head>
-    <body >
-        <div class="bg">
-            <img class="layer2" src= "{% static '/images/laugher1.jpg' %}" alt="" />
-            <h1 class="layer1"><span id="dec">HUMOR</span>ER</h1>
-            <!--src= "{% static '/images/laugher1.jpg' %}"-->
+    
+    <body>
+    
+    
+   
+
+    <!-- ***** Main Banner Area Start ***** -->
+    <div class="main-banner" id="top">
+        <video autoplay muted loop id="bg-video">
+            <source src= "{% static '/images/video1.mp4' %}" type="video/mp4" />
+        </video>
+
+        <div class="video-overlay header-text">
+            <div class="caption">
+                {% block content %}
+                <h4 id = 'heading' style="font-weight: 700;">5 OF THE FUNNIEST JOKES EVER TOLD</h4>
+                {% for joke in jokes %}
+                  <ul><li id = 'joke' style="font-weight: 700;"><span>{{joke}}</span></li></ul>
+                {% endfor %}
+                {% endblock %}
+                <a href="{% url 'home' %}" class="landingbutton" ><span style="text-align: center;">View More</span></a>
+            </div>
         </div>
-        <div class="cont">
-        {% block content %}
-        <h2 id = 'heading'>5 OF THE WORLD'S BEST JOKES</h2>
-        {% for joke in jokes %}
-          <ul><li id = 'joke'><span>{{joke}}</span></li></ul>
-        {% endfor %}
-        {% endblock %}
-        <a href="{% url 'home' %}" class="landingbutton" ><span>View More</span></a>
-        </div>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-  
-        
-    </body>
+    </div>
+    <!-- ***** Main Banner Area End ***** -->
+
+    
+
+  </body>
 </html>
