--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,11 @@
 
     
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="{% static '/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 
-    <link rel="stylesheet" href="{% static '/font-awesome.css' %}">
+    <link rel="stylesheet" href="{% static 'font-awesome.css' %}">
 
-    <link rel="stylesheet" href="{% static '/templatemo-training-studio.css' %}">
+    <link rel="stylesheet" href="{% static 'templatemo-training-studio.css' %}">
 
     </head>
     
