--- a/app/templates/accounts.html
+++ b/app/templates/accounts.html
@@ -63,7 +63,7 @@
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Update</button>
             </div>
-            <a href="{% url 'logout'%}?next={% url 'index' %}" id="change">Logout</a>
+            <a href="{% url 'logout'%}?next={% url 'index' %}" class="btn btn-outline-info">Logout</a>
 
         {% endif %}
     </form>
