--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
                   <ul><li id = 'joke' style="font-weight: 700;"><span>{{joke}}</span></li></ul>
                 {% endfor %}
                 {% endblock %}
-                <a href="{% url 'home' %}" class="landingbutton" ><span style="text-align: center;">View More</span></a>
+                <a href="{% url 'home' %}" class="btn btn-outline-info" role="button">View More</a>
             </div>
         </div>
     </div>
