--- a/app/templates/memes.html
+++ b/app/templates/memes.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
     {% block content %}
     <div id="home2" class="bgImage" >
-      <h1 class="container-md " style="text-align: center; color: yellow; margin: 10%;">A day without memes is full of stress, depression and hypertension. Laugh to live! <i class="fas fa-laugh    "></i>
+      <h1 style="text-align: center; color: yellow; margin: 10%;">A day without memes is full of stress, depression and hypertension. Laugh to live! <i class="fas fa-laugh    "></i>
     </div>
 
     {% if memes %}
