--- a/app/templates/indeed.html
+++ b/app/templates/indeed.html
@@ -1,30 +1,116 @@
-{% block content %}
-<div id="home2">
-    <h1 class="head-main">CRACK A RIB</h1>
-    <h2 class="head-sub-main">Dark humor, Memes, Vines, Funny stories all in one place</h2>
-    <h3 class="head-last">You can count on us to lighten up your day</h3>
-    <div class="homebtn"><div id="btnleft"><a href="#joke" >WHITE</a> </div>&nbsp;  <div id="btnright" ><a href=".cont2" >DARK</a></div></div>
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+<head>
+    {% block title %}<title>HUMORER</title>{% endblock %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'magic.css' %}">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static 'index.js' %}"></script>
+    <script>
+        $(document).ready(function () {
+            $(window).scroll(function () {
+                if ($(window).scrollTop() + $(window).height() == $(document).height()) {
+                    alert("You have reached the end of your feed. Check back tommorrow for more fun!");
+                }
+            })
+        });
+    </script>
+    <style>
+      #logos{
+        font-family: Florence, cursive;
+        color: black;
+      }
+      #er{
+        color: yellow;
+      }
+      
+    </style>
 
+</head>
+<body>
+
+  <nav class="navbar sticky-top navbar-expand-lg bg-warning">
+    <div class="container">
+      <a href="{% url 'home' %}" class="nav-branding"><span id="logos">HUMOR</span><span id="er">.ER</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <i class="fas fa-bars"></i>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto w-100 justify-content-end">
+          <li class="nav-item active">
+            <a href="{% url 'home' %}" class="nav-link" style="color: black;">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'memes' %}" class="nav-link" style="color: black;">Memes</a>
+            <li class="nav-item">
+              <a href="{% url 'shorts' %}" class="nav-link" style="color: black;">Shorts</a>
+              <li class="nav-item">
+                <a href="{% url 'stories' %}" class="nav-link" style="color: black;">Stories</a>
+                <li class="nav-item">
+                  <a href="{% url 'earn' %}" class="nav-link" style="color: black;">Earn</a>
+                </li>
+                <li class="nav-item">
+                  {% if user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{% url 'profile' user.username %}" style="color: black;">
+                      {{user.username}} <i class="fas fa-user"></i>
+                  {% endif %}
+                  </a>
+                </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+<div>
+  {% block content %}{% endblock %}
 </div>
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div  id="footer">
+  <footer class="text-center text-lg-start" style="background-color: #423e3d;">
+    <!--<div class="container d-flex justify-content-center py-5">
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <i class="fab fa-facebook-f"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <i class="fab fa-youtube"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <i class="fab fa-instagram"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <i class="fab fa-twitter"></i>
+      </button>
+    </div>-->
+
+    <!-- Copyright -->
+    <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a href="{% url 'home' %}" class="nav-branding"><span id="logos">HUMOR</span><span id="er">.ER</span></a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  
 </div>
-<div style="padding-top: 10%;" class="bgImage" >
-<div class = "cont">
-    
-    {% for joke in jokes %}
-    <ul><li class = 'joke'><span>{{joke}}</span></li></ul>
-    {% endfor %}
+<!-- End of .container -->
 
-</div>
-</div>
-<div style="padding-top: 10%;" class="bgImage" >
-<div class="cont2">
 
-{% for dark_joke in dark_jokes %}
-<ul><li class = 'joke'><span>{{dark_joke}}</span></li></ul>
-{% endfor %}
-
-</div> 
-
-</div>
-
-{% endblock %}
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+</body>
+</html>
