--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
     {% block content %}
     <div id="home2" class="bgImage" >
-      <h1 class="container-md " style="text-align: center; color: yellow;margin: 10%;">Laughter will always be the best medicine. Have you had your shot today?<i class="fas fa-laugh    "></i>
+      <h1 style="text-align: center; color: yellow;margin: 10%;">Laughter will always be the best medicine. Have you had your shot today?<i class="fas fa-laugh    "></i>
     </div>
 
     {% if shorts %}
