--- a/app/static/magic.css
+++ b/app/static/magic.css
@@ -1,37 +1,33 @@
-
 .bgImage{
     width: 100%;
     height: auto;
     background-attachment: fixed;
     overflow: hidden;
     position: relative;
-    background-image: url(/images/laugher1.jpg);
+    background-image: url(/image/download/uploads/bg/laugher1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     justify-content: center;
     animation: change 10s infinite ease-in-out;
     align-content: center;
-}
-@keyframes change{
+  }
+  @keyframes change{
     0%
     {
-        background-image: url(/images/laugher1.jpg);
+        background-image: url(/image/download/uploads/bg/laugher1.jpg);
     }
-
+  
     20%
     {
-        background-image: url(/images/laugherpro.jpg);
+        background-image: url(/image/download/uploads/bg/laugherpro.jpg);
     }
-
+  
     40%
     {
-        background-image: url(/images/laugherultra.jpg);
+        background-image: url(/image/download/uploads/bg/laugherultra.jpg);
     }
-
-
-
-}
+  }
 .quote {
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(to right,#020024,
