--- a/app/templates/indeed.html
+++ b/app/templates/indeed.html
@@ -114,3 +114,36 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
+.bgImage{
+  width: 100%;
+  height: auto;
+  background-attachment: fixed;
+  overflow: hidden;
+  position: relative;
+  background-image: url(/images/laugher1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  justify-content: center;
+  animation: change 10s infinite ease-in-out;
+  align-content: center;
+}
+@keyframes change{
+  0%
+  {
+      background-image: url(/images/laugher1.jpg);
+  }
+
+  20%
+  {
+      background-image: url(/images/laugherpro.jpg);
+  }
+
+  40%
+  {
+      background-image: url(/images/laugherultra.jpg);
+  }
+
+
+
+}
