--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -12,7 +12,7 @@
       {% for short in shorts %}
       <div style="margin-top: 0%;">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe style="border-radius:20px; height: 80%;" class="embed-responsive-item" src="{{ short.video }}" allowfullscreen></iframe>
+          <iframe id="video" style="border-radius:20px; height: 80%;" class="embed-responsive-item" src="{{ short.video }}" allowfullscreen></iframe>
         </div>
       </div>
       {% endfor %}
