--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,19 +10,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<title>Document</title>
 
+
 </head>
-<body style="background-color: black;">
+<body style="background-color: rgb(212, 212, 212);">
 	
 	{% block content %} 
 
-	<!--{% if form.errors %}
-		<div class=" alert alert-warning alert-dismissible
-		fade show" role="alert">
-			There was an error with your form...
-			<button type="button" class="btn-close"
-			data-bs-dismiss="alert" aria-label="Close"></button>
-		</div>
-	{% endif %}-->
 	{% if messages %}
 	{% for message in messages %}
 	  <div class="alert alert-dismissible alert-success">
@@ -34,22 +27,26 @@
    {% endfor %}
   {% endif %}
 
-	<Div class="container" >
-		<div class="shadow p-4 mb-5 bg-body rounded" style="background-color: yellow; align-content: center;">
-			<h1 class="text-center">Join the community</h1>
 
-			<form method="post" >
+			
+
+			<form method="post" class="container-sm" style="border-radius: 20px; padding: 20px;">
+				<h3 class="text-center">Join the fun community!</h3>
 				{% csrf_token %}
-				{{ form|crispy }}
+				<div  class="form-row" style="justify-content: center; margin: auto; border: 90px blue;">
+					<div class="form-group col-md-6 mb-0" style=" box-shadow: 5px 10px 18px #888888; padding: 20px; border-radius: 15px;">
+						{{ form|crispy }}
+						<div class="text-center">
+							<input class="btn btn-outline-info" type="submit" name="submit" value="Register">
+						</div>	
+					</div>	
+			
+				</div> 
 				<br>
-				<div class="text-center">
-					<input class="btn btn-secondary" type="submit" name="submit" value="Register">
-				  </div>
+
 				
 			</form>
-		</div>
-
-	</Div>
+	
 	{% endblock content %}
 
 </body>
