--- a/app/static/regstyles.css
+++ b/app/static/regstyles.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  background: linear-gradient(212.38deg, rgba(242, 57, 127, 0.7) 0%, rgba(175, 70, 189, 0.71) 100%),url(/image/download/uploads/bg/laugherpro.jpg);
+  background-color: linear-gradient(212.38deg, rgba(242, 57, 127, 0.7) 0%, rgba(175, 70, 189, 0.71) 100%);
   font-family: 'Inter UI', sans-serif;
   margin: 0;
   padding: 20px;
