--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="{% static '/regstyles.css' %}">
         <script type="text/javascript" src="{% static 'index.js' %}"></script>
     </head>
-    <body>
+    <body style="background-image: url(/image/download/uploads/bg/laugherpro.jpg);">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
