--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,7 +30,7 @@ function myFunction() {
     <div  ><button type="button" class="btn btn-secondary btn-lg" onclick="myFunction()" id="myBtn">Show Dark</button></div></div>
 </div>
 </div>
-<span style="background-color: black; color: yellow; border-radius: 0px 0px 10px 0px;">Editor's Choice</span>
+<span style="background-color: black; color: yellow; border-radius: 0px 0px 10px 0px; text-align: center;">Editor's Choice</span>
 <div style="padding-top: 2%;" > 
 <div class="container-md border" style="text-align: center; border-radius: 20px;">
     <!--<h4>Welcome {{ user.username }}</h4>-->
