--- a/app/templates/indeed.html
+++ b/app/templates/indeed.html
@@ -133,3 +133,12 @@
     
   </form>
 </div>
+function reveal()
+{
+if(document.getElementById('box').checked)
+  {document.getElementById("id_password").type='text';}
+else{
+  document.getElementById("id_password").type='password';
+}
+
+}
