--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     {% block title %}<title>HUMORER</title>{% endblock %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Humorer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -33,7 +33,7 @@
     <style>
       #logos{
         font-family: Florence, cursive;
-        color: black;
+        color: rgb(14, 13, 13);
       }
       #er{
         color: yellow;
@@ -128,7 +128,7 @@
     </div>-->
 
     <!-- Copyright -->
-    <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center text-white p-3" style="background-color: rgba(124, 123, 123, 0.2);">
       © 2022 Copyright:
       <a href="{% url 'home' %}" class="nav-branding"><span id="logos">HUMOR</span><span id="er">.ER</span></a>
     </div>
