--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,16 +6,16 @@
 <html lang="en">
 <!--<![endif]-->
 <head>
-    {% block title %}<title>HUMORER</title>{% endblock %}
+    {% block title %}<title>Humorer</title>{% endblock %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Humorer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% load static %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/icon.jpg' %}"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    {% load static %}
     <link rel="stylesheet" href="{% static 'magic.css' %}">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -76,7 +76,7 @@
 
   <nav class="navbar sticky-top navbar-expand-lg bg-warning">
     <div class="container">
-      <a href="{% url 'home' %}" class="nav-branding"><span id="logos">HUMOR</span><span id="er">.ER</span></a>
+      <a href="{% url 'home' %}" class="nav-branding"> <span id="logos">HUMOR</span><span id="er">.ER</span> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <i class="fas fa-bars"></i>
       </button>
@@ -112,19 +112,14 @@
 <!-- Remove the container if you want to extend the Footer to full width. -->
 <div  id="footer">
   <footer class="text-center text-lg-start" style="background-color: #423e3d;">
-    <!--<div class="container d-flex justify-content-center py-5">
-      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-        <i class="fab fa-facebook-f"></i>
-      </button>
-      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-        <i class="fab fa-youtube"></i>
-      </button>
-      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-        <i class="fab fa-instagram"></i>
-      </button>
-      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-        <i class="fab fa-twitter"></i>
-      </button>
+    <div class="container d-flex justify-content-center py-5">
+      <div style="color: antiquewhite;">
+        <span>#Humorer makes you happy</span>
+        <br>
+        <span>Live to laugh or laugh to live</span>
+        <br>
+        <span>Contact us: <a>Info.humorer@gmail.com</a></span>
+      </div>
     </div>-->
 
     <!-- Copyright -->
