--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -37,7 +37,7 @@ function myFunction() {
     <h1>10 funny jokes for some Serotonin activation &#128513</h1>
     <hr>
     {% for joke in jokes %}
-    <ul style="list-style-type: none;"><li class = 'container-sm border' style="border-radius: 20px; box-shadow: 5px 5px 5px gray;"><span>&#128517 {{joke}}</span></li></ul>
+    <ul style="list-style-type: none;"><li class = 'container-sm border' style="border-radius: 20px; box-shadow: 5px 5px 5px gray; padding: 5%;"><span>&#128517 {{joke}}</span></li></ul>
     {% endfor %}
 
 </div>
@@ -54,7 +54,7 @@ function myFunction() {
           <hr>
         {% for dark_joke in dark_jokes %}
         
-          <ul style="list-style-type: none;"><li class = 'container-sm border' style="border-radius: 20px; box-shadow: 5px 5px 5px gray;"><span>&#128128 {{dark_joke}}</span></li></ul>
+          <ul style="list-style-type: none;"><li class = 'container-sm border' style="border-radius: 20px; box-shadow: 5px 5px 5px gray; padding: 5%;"><span>&#128128 {{dark_joke}}</span></li></ul>
         
         {% endfor %}
         </div>
