--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
                 {% block content %}
                 <h4 id = 'heading' style="font-weight: 700;">5 OF THE FUNNIEST JOKES EVER TOLD</h4>
                 {% for joke in jokes %}
-                  <ul><li id = 'joke' style="font-weight: 700;"><span>{{joke}}</span></li></ul>
+                  <ul><li class="container-sm border" style="font-weight: 700; border-radius: 20px; margin: 2%; padding: 1%;"><span>{{joke}}</span></li></ul>
                 {% endfor %}
                 {% endblock %}
                 <a href="{% url 'home' %}" class="btn btn-outline-info" role="button">View More</a>
