--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -44,7 +44,7 @@
             <div class="container">
               <div class="left">
                 <div class="login">Login</div>
-                <div class="eula">By logging in you agree to the ridiculously long terms of service. Your login details help us save your humor preferences. You can't be bored twice!!</div>
+                <div class="eula">By logging in you agree to the ridiculously long terms of service. Your login details help us save your humor preferences.</div>
               </div>
               <div class="right" class="container">
                 <svg viewBox="0 0 320 300">
