--- a/app/static/regstyles.css
+++ b/app/static/regstyles.css
@@ -84,13 +84,13 @@ body {
 .login {
   font-size: 50px;
   font-weight: 900;
-  margin: 50px 40px 40px;
+  /*margin: 50px 40px 40px;*/
 }
 .eula {
   color: #999;
   font-size: 14px;
   line-height: 1.5;
-  margin: 10px;
+  margin: 40px;
 }
 .right {
   background: #474A59;
