--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -31,7 +31,7 @@
 			
 
 			<form method="post" class="container-sm" style="border-radius: 20px; padding: 20px;">
-				<h3 class="text-center">Join the fun community!</h3>
+				<h3 class="text-center">Join the fun <span style="color: yellow;">community</span>!</h3>
 				{% csrf_token %}
 				<div  class="form-row" style="justify-content: center; margin: auto; border: 90px blue;">
 					<div class="form-group col-md-6 mb-0" style=" box-shadow: 5px 10px 18px #888888; padding: 20px; border-radius: 15px;">
