--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -120,10 +120,10 @@
         <br>
         <span>Contact us: <a>Info.humorer@gmail.com</a></span>
       </div>
-    </div>-->
+    </div>
 
     <!-- Copyright -->
-    <div class="text-center text-white p-3" style="background-color: rgba(124, 123, 123, 0.2);">
+    <div class="text-center text-white p-2" style="background-color: rgba(124, 123, 123, 0.2);">
       © 2022 Copyright:
       <a href="{% url 'home' %}" class="nav-branding"><span id="logos">HUMOR</span><span id="er">.ER</span></a>
     </div>
