--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,9 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     {% load static %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/icon.jpg' %}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
-    <title>HUMORER</title>
+    <title>Humorer</title>
 
     
     <!-- Additional CSS Files -->
