--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'magic.css' %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -68,6 +69,39 @@
             background-image: url(/image/download/uploads/bg/laugherultra.jpg);
         }
       }
+#bars {
+  background-color: #004A7F;
+  color: #FFFFFF;
+  -webkit-animation: glowing 1500ms infinite;
+  -moz-animation: glowing 1500ms infinite;
+  -o-animation: glowing 1500ms infinite;
+  animation: glowing 1500ms infinite;
+  border: 5px #423e3d;
+  border-radius: 5px;
+}
+@-webkit-keyframes glowing {
+  0% { background-color: #B20000; -webkit-box-shadow: 0 0 3px #B20000; }
+  50% { background-color: #FF0000; -webkit-box-shadow: 0 0 40px #FF0000; }
+  100% { background-color: #B20000; -webkit-box-shadow: 0 0 3px #B20000; }
+}
+
+@-moz-keyframes glowing {
+  0% { background-color: #B20000; -moz-box-shadow: 0 0 3px #B20000; }
+  50% { background-color: #FF0000; -moz-box-shadow: 0 0 40px #FF0000; }
+  100% { background-color: #B20000; -moz-box-shadow: 0 0 3px #B20000; }
+}
+
+@-o-keyframes glowing {
+  0% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
+  50% { background-color: #FF0000; box-shadow: 0 0 40px #FF0000; }
+  100% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
+}
+
+@keyframes glowing {
+  0% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
+  50% { background-color: #FF0000; box-shadow: 0 0 40px #FF0000; }
+  100% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
+}
       
     </style>
 
@@ -78,27 +112,27 @@
     <div class="container">
       <a href="{% url 'home' %}" class="nav-branding"> <span id="logos">HUMOR</span><span id="er">.ER</span> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-       <i class="fas fa-bars"></i>
+       <i class="fas fa-bars" id="bars"></i>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto w-100 justify-content-end">
           <li class="nav-item active">
-            <a href="{% url 'home' %}" class="nav-link" style="color: black;">Home <span class="sr-only">(current)</span></a>
+            <a href="{% url 'home' %}" class="nav-link" style="color: black;"> <i class="fa fa-home"></i> Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a href="{% url 'memes' %}" class="nav-link" style="color: black;">Memes</a>
+            <a href="{% url 'memes' %}" class="nav-link" style="color: black;"><i class="fas fa-image "></i> Memes</a>
             <li class="nav-item">
-              <a href="{% url 'shorts' %}" class="nav-link" style="color: black;">Shorts</a>
+              <a href="{% url 'shorts' %}" class="nav-link" style="color: black;"> <i class="fa fa-play-circle"></i> Shorts</a>
               <li class="nav-item">
-                <a href="{% url 'stories' %}" class="nav-link" style="color: black;">Stories</a>
+                <a href="{% url 'stories' %}" class="nav-link" style="color: black;"><i class='fas fa-newspaper'></i> Stories</a>
                 <li class="nav-item">
-                  <a href="{% url 'earn' %}" class="nav-link" style="color: black;">Earn</a>
+                  <a href="{% url 'earn' %}" class="nav-link" style="color: black;"><i class="fas fa-dollar-sign"></i> Earn</a>
                 </li>
                 <li class="nav-item">
                   {% if user.is_authenticated %}
                   <a class="nav-item nav-link" href="{% url 'profile' user.username %}" style="color: black;">
-                      {{user.username}} <i class="fas fa-user"></i>
+                    <i class="fas fa-user"></i> {{user.username}} 
                   {% endif %}
                   </a>
                 </li>
@@ -118,7 +152,12 @@
         <br>
         <span>Live to laugh or laugh to live</span>
         <br>
-        <span>Contact us: <a>Info.humorer@gmail.com</a></span>
+        <span>Contact us: 
+          <br>
+          <i class="fa fa-envelope"></i> <a href="mailto:info.humorer@gmail.com">Send email</a>
+          <br>
+          <i class="fa fa-phone"></i> <a href="tel:+254717102096">+254 717102096</a>
+        </span>
       </div>
     </div>
 
