--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -16,7 +16,7 @@
             <video style="border-radius:0px; height: 80%; padding: 0%;" class="embed-responsive-item"  controls>
               <source src="{{ short.video.url }}">
             </video>
-            <a id="source" href="{{short.source}}" class="btn btn-outline-info" style="margin-bottom: 5%;">Source</a>
+            <a id="source" href="{{short.source}}" class="btn btn-outline-info">Source</a>
           </div>
           <!--<iframe id="video" style="border-radius:20px; height: 80%;" class="embed-responsive-item" src="{{ short.video.url }}" allowfullscreen></iframe>-->
         </div>
