--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
     <!-- ***** Main Banner Area Start ***** -->
     <div class="main-banner" id="top">
         <video autoplay muted loop id="bg-video">
-            <source src= "/uploads/bg/video1.mp4" type="video/mp4" />
+            <source src= "/media/bg/video1.mp4" type="video/mp4" />
         </video>
 
         <div class="video-overlay header-text">
