--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -43,6 +43,19 @@ function myFunction() {
     {% for joke in jokes %}
     <div class = 'container-sm border' style="border-radius: 10px; box-shadow: 5px 5px 5px gray; padding: 5%; margin-bottom: 2%;">
       <ul style="list-style-type: none;"><li>&#128517 {{joke}}</li></ul>
+      {% if user.is_authenticated %}
+      <form action="{% url 'like_white' %}" method="POST">
+          {% csrf_token %}
+
+          <button type="submit" name="joke_id" value="{{joke.id}}" class="btn btn-prmary btn btn-sm">
+            <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
+          </button>
+      </form>
+      {% else %}
+      <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}">Log in to like this item!</a><br>
+      {% endif %}
+      <strong class="text-secondary">{{ joke.likes.count }} Laugh{{ joke.likes.count|pluralize }}</strong>
+      
     </div>
     
     {% endfor %}
@@ -62,6 +75,19 @@ function myFunction() {
         {% for dark_joke in dark_jokes %}
         <div class = 'container-sm border' style="border-radius: 10px; box-shadow: 5px 5px 5px gray; padding: 5%; margin-bottom: 2%;">
           <ul style="list-style-type: none;"><li>&#128128 {{dark_joke}}</li></ul>
+          {% if user.is_authenticated %}
+          <form action="{% url 'like_dark' %}" method="POST">
+              {% csrf_token %}
+
+              <button type="submit" name="dark_joke_id" value="{{dark_joke.id}}" class="btn btn-prmary btn btn-sm">
+                <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
+              </button>
+          </form>
+          {% else %}
+          <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}">Log in to like this item!</a><br>
+          {% endif %}
+          <strong class="text-secondary">{{ dark_joke.likes.count }} Laugh{{ dark_joke.likes.count|pluralize }}</strong>
+          
         </div>
         {% endfor %}
         </div>
