--- a/app/templates/memes.html
+++ b/app/templates/memes.html
@@ -15,6 +15,18 @@
             <a target="_blank" href="{{ meme.image.url }}" class="text-center">
               <img class="img-fluid" id="meme" src="{{ meme.image.url }}" alt="" >
             </a>
+            {% if user.is_authenticated %}
+            <form action="{% url 'like_meme' %}" method="POST">
+                {% csrf_token %}
+
+                <button type="submit" name="meme_id" value="{{meme.id}}" class="btn btn-prmary btn btn-sm">
+                  <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
+                </button>
+            </form>
+            {% else %}
+            <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}">Log in to like this item!</a><br>
+            {% endif %}
+            <strong class="text-secondary">{{ meme.likes.count }} Laugh{{ meme.likes.count|pluralize }}</strong>
             
           
       </div>
