--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -10,15 +10,29 @@
       <h1>10 funny videos to start your day!</h1>
 
       {% for short in shorts %}
-      <div style="margin: 0%;">
-        <div class="embed-responsive embed-responsive-16by9"  style="box-shadow: 5px 5px 5px gray; border-radius: 10px; margin-bottom: 5%;">
-          <div>
-            <video style="border-radius:0px; height: 80%; padding: 0%;" class="embed-responsive-item"  controls>
+      <div style="margin: 0%; box-shadow: 5px 5px 5px gray; border-radius: 10px; margin-bottom: 5%;">
+        <div class="embed-responsive embed-responsive-16by9"  style="border-radius: 10px; height: 80vh; margin-bottom: 5%;">
+
+            <video style="border-radius:0px; padding: 0%;" class="embed-responsive-item"  controls>
               <source src="{{ short.video.url }}">
             </video>
-            <a id="source" href="{{short.source}}" class="btn btn-outline-info">Source</a>
-          </div>
           <!--<iframe id="video" style="border-radius:20px; height: 80%;" class="embed-responsive-item" src="{{ short.video.url }}" allowfullscreen></iframe>-->
+        </div>
+        <div>
+          <a id="source" href="{{short.source}}" class="btn btn-outline-info">Source</a>
+            {% if user.is_authenticated %}
+            <form action="{% url 'like_short' %}" method="POST">
+                {% csrf_token %}
+
+                <button type="submit" name="short_id" value="{{short.id}}" class="btn btn-prmary btn btn-sm">
+                  <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
+                </button>
+            </form>
+            {% else %}
+            <a class="btn btn-outline-info" href="{% url 'login' %}?next={{request.path}}">Log in to like this item!</a><br>
+            {% endif %}
+            <strong class="text-secondary">{{ short.likes.count }} Laugh{{ short.likes.count|pluralize }}</strong>
+         
         </div>
       </div>
       {% endfor %}
