--- a/app/templates/accounts.html
+++ b/app/templates/accounts.html
@@ -73,7 +73,7 @@
         {% endif %}
     </form>
 </div>
-<div class="bgImage" style="text-align: center; margin-top: 5%;">
+<div  style="text-align: center; margin-top: 5%;">
     <h3 class="quote"><q>Privacy is not an option<br>
      and it shouldn't be the price we accept <br>
      for just getting on the internet
