--- a/app/templates/earn.html
+++ b/app/templates/earn.html
@@ -2,13 +2,13 @@
 {% load static %}
   {% block content %}
   <style>
-      .center{
-        border: 20px solid gray;
+      #center{
+        
         height: 90vh;
         text-align: center;
         position: relative;
       }
-      .center p {
+      #center p {
       margin: 0;
       position: absolute;
       top: 50%;
@@ -98,7 +98,7 @@
           </div>
       </div>
   </div>-->
-  <div class="center">
+  <div class="container-md" id="center">
     <p>Time for lowkey comedians to make some cash &#128184. Unfortunately we are still coming up with the logic behind this page. We'll let you know once we are done <i class="fas fa-clock"></i></p> 
   </div>
   <!--<form method="post" enctype="multipart/form-data">
